--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,68 +1,148 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+* {
+  padding: 0;
   margin: 0;
+  box-sizing: border-box;
+}
+
+#root {
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  width: 100vw;
+  height: 100vh;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.app {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
+.header {
+  display: flex;
+  background-color: #675645;
+  width: 100%;
+  height: 15vh;
+  color: #e1d798;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, sans-serif;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 1rem 0;
+}
+
+.header > div {
+  height: 75%;
+  /* border: black solid 1px; */
+}
+
+.leftheader {
+  justify-content: space-evenly;
+}
+
+.leftheader > a {
+  color: #e1d798;
+  text-decoration: none;
+  font-size: 1.1rem;
+}
+
+.leftheader > a:hover {
+  color: #e3e2e0;
+  text-decoration: underline;
+  text-decoration-color: #e1d798;
+}
+
+.centerheader,
+.leftheader {
+  width: 30%;
+  display: flex;
+  align-items: center;
+}
+
+.centerheader {
+  direction: rtl;
+}
+
+.imgheader > img {
+  height: 100%;
+}
+
+.main {
+  width: 100%;
+}
+
+.main > .tank_image {
+  width: 100%;
+  height: 73vh;
+}
+
+.tank_image {
+  background-image: url("./assets/tank_image.png");
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center 64%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.tank_image > h1 {
+  color: #90885e;
+  font-size: 4rem;
+  text-shadow: 0 2px 6px rgba(0, 0, 0, 0.4);
+  margin-bottom: 20px;
+  background: linear-gradient(#e1d798, #827951);
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.tank_image > h3 {
+  font-size: 1.5rem;
   font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  text-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+  color: #fff;
+  opacity: 0.9;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.form {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 3rem 2rem 6rem;
+  color: #4d784e;
+  /* background-color: green; */
+}
+
+.formcenter {
+  max-width: 800px;
+  margin: -4rem auto;
+  background-color: #fff;
+  border-radius: 12px;
+  box-shadow: 0 8px 24px #6756451f;
+  padding: 2.5rem;
+  position: relative;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  direction: rtl;
+}
+
+.input{
+  width: 95.5%;
+  padding: .75rem 1rem;
+  border: 2px solid #6ea171;
+  border-radius: 6px;
+}
+
+label{
+  display: block;
+  font-size: 1.125rem;
+  margin-bottom: 0.75rem;
+}
+
+.test{
+  height: 300px;
 }
