--- a/client/src/index.css
+++ b/client/src/index.css
@@ -127,22 +127,89 @@
   z-index: 2;
   display: flex;
   flex-direction: column;
+  gap: 40px;
   direction: rtl;
+  align-items: center;
 }
 
-.input{
+.input,
+.notes {
+  width: 100%;
+}
+
+.input > input {
   width: 95.5%;
-  padding: .75rem 1rem;
+  padding: 0.75rem 1rem;
   border: 2px solid #6ea171;
   border-radius: 6px;
 }
 
-label{
+label {
   display: block;
   font-size: 1.125rem;
   margin-bottom: 0.75rem;
 }
 
-.test{
-  height: 300px;
+.guidelines, .preference{
+  background-color: #fdfdfa;
+}
+
+.guidelines {
+  width: 80%;
+  height: 400px;
+  background-color: red;
+}
+
+.preference {
+  margin-bottom: 3rem;
+  border-radius: 8px;
+  padding: 1.5rem;
+  border: 1px solid rgba(103, 86, 69, 0.1);
+  width: 100%;
+  height: 400px;
+}
+
+.preference > h1 {
+  color: #4d784e;
+  margin-bottom: 1.5rem;
+  padding-bottom: 0.75rem;
+  border-bottom: 2px solid rgba(77, 120, 78, 0.2);
+}
+
+.notes > textarea {
+  width: 95.5%;
+  min-height: 8rem;
+  padding: 0.75rem 1rem;
+  border: 2px solid #6ea171;
+  border-radius: 6px;
+}
+
+.sendbtn {
+  width: 100%;
+  padding: 1rem;
+  background-color: #4d784e;
+  color: #e1d798;
+  font-weight: 600;
+  font-size: 1.1rem;
+  border: none;
+  border-radius: 6px;
+}
+
+.preference-radio{
+  width: 100%;
+  height: 100%;
+  background-color: rgb(190, 174, 174);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+.options{
+  width: 30%;
+}
+
+.preference-radio > div{
+  background-color: rebeccapurple;
+  width: 100%;
+  height: 75px;
 }
