--- a/client/src/index.css
+++ b/client/src/index.css
@@ -202,6 +202,12 @@ label {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+
+  /* margin-bottom: 3rem;
+  background-color: #e1d7980d;
+  border-radius: 8px;
+  padding: 1.5rem;
+  border: 1px solid rgba(103, 86, 69, .1); */
 }
 
 .options{
